Fix spacing and make columns

--- a/app/global.scss
+++ b/app/global.scss
@@ -5,7 +5,7 @@ html, body {
   font-family: Metropolis, Proxima Nova, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 20px;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 200;
   line-height: 125%;
   letter-spacing: -0.2px;
 }
